@@ -776,22 +776,27 @@ writeMasterControl()
       OTF_MasterControl_new( p_uni_mastercontrol_manager );
    assert( p_uni_mastercontrol );
 
-   // put stream/process matching to master control
+   // add stream/process matching to master control
    //
    for( uint32_t i = 0; i < g_vecUnifyCtls.size(); i++ )
    {
-      if( OTF_MasterControl_append( p_uni_mastercontrol,
-				    g_vecUnifyCtls[i]->streamid,
-				    g_vecUnifyCtls[i]->streamid ) == 0 )
+      // do only add streams which have datatype
+      //
+      if( g_vecUnifyCtls[i]->has_data )
       {
-	 std::cerr << ExeName << ": Error: "
-		   << "Could not append "
-		   << g_vecUnifyCtls[i]->streamid << ":"
-		   << std::hex << g_vecUnifyCtls[i]->streamid
-		   << " to OTF master control"
-		   << std::dec << std::endl;
-	 error = true;
-	 break;
+	 if( OTF_MasterControl_append( p_uni_mastercontrol,
+				       g_vecUnifyCtls[i]->streamid,
+				       g_vecUnifyCtls[i]->streamid ) == 0 )
+	 {
+	    std::cerr << ExeName << ": Error: "
+		      << "Could not append "
+		      << g_vecUnifyCtls[i]->streamid << ":"
+		      << std::hex << g_vecUnifyCtls[i]->streamid
+		      << " to OTF master control"
+		      << std::dec << std::endl;
+	    error = true;
+	    break;
+	 }
       }
    }
 
